--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
 		<!-- BOOTSTRAP -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="bootstrap.min.css" rel="stylesheet">
 		<!-- FONT AWESOME -->
-		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="font-awesome.min.css">
 		<!-- CUSTOM STYLING -->
-		<link href="css/styles.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet">
 		<!-- PRELOADER -->
-		<link href="css/loader.css" rel="stylesheet">
+		<link href="loader.css" rel="stylesheet">
 
 	</head>
 
@@ -39,7 +39,7 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-8">
-						<img class="logo" src="images/Jeju_logo_2.png"/>
+						<img class="logo" src="Jeju_logo_2.png"/>
 						<h1 class="white-text">제주도의 다양한 볼거리</h1>
 						<h5 class="white-text">전 세계인의 치유 여행지, 제주!</h5>
 						<div id="countdown" class="white-text"></div>
